--- a/template/registration.html
+++ b/template/registration.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'dummy.html' %}
+{% block title %}
+    <title>registration</title>
+{% endblock %}
+{% block body_block %}
     <center>
         <h1>RegistrationForm</h1>
         <form method="POST"  enctype="multipart/form-data">
@@ -16,5 +12,4 @@
             <input type="submit" value="register">
         </form>
     </center>
-</body>
-</html>
+{% endblock %}
