--- a/template/home.html
+++ b/template/home.html
@@ -4,7 +4,11 @@
 {% endblock %}
 
 {% block body_block %}
+       {% if username %}
+        <h1>Welcome To Home Page MR/MS{{username}}</h1>
+        {% else %}
         <h1>Welcome To Home Page</h1>
+        {% endif %}
 {% endblock %}
 
    
