--- a/template/dummy.html
+++ b/template/dummy.html
@@ -18,6 +18,8 @@
             <a href="{% url 'registration'%}" class="nav-link">Registration</a>
             <a href="{% url 'home' %}" class="nav-link">Home Page</a>
             {% if user.is_auticated %}
+            <a href="{% url 'display_profile' %}" class="nav-link">display_profile</a>
+            <a href="{% url 'change_password' %}" class="nav-link">change_password</a>
             <a href="{% url 'user_logout' %}" class="nav-link">user_logout</a>
             {% else %} 
             <a href="{% url 'user_login' %}" class="nav-link">user_login</a>
